parser.automaton
State 0:
toplevel' -> . toplevel [ # ]
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On LET shift to state 106
-- On INTV shift to state 14
-- On IF shift to state 15
-- On ID shift to state 16
-- On FUN shift to state 17
-- On FALSE shift to state 20
-- On DFUN shift to state 21
-- On toplevel shift to state 114
-- On PExpr shift to state 24
-- On ORExpr shift to state 41
-- On MulLET shift to state 115
-- On MatchExpr shift to state 53
-- On MExpr shift to state 36
-- On LetExpr shift to state 54
-- On LTExpr shift to state 43
-- On IfExpr shift to state 55
-- On GTExpr shift to state 44
-- On FunExpr shift to state 56
-- On Expr shift to state 117
-- On EQExpr shift to state 45
-- On ConsExpr shift to state 58
-- On AppExpr shift to state 31
-- On ANDExpr shift to state 52
-- On AExpr shift to state 30

State 1:
AExpr -> TRUE . [ WITH VERT TRUE THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LSQPAREN LPAREN LET INTV IN ID GT FALSE EQ ELSE CONS AND AAND ]
-- On WITH reduce production AExpr -> TRUE 
-- On VERT reduce production AExpr -> TRUE 
-- On TRUE reduce production AExpr -> TRUE 
-- On THEN reduce production AExpr -> TRUE 
-- On SEMISEMI reduce production AExpr -> TRUE 
-- On SEMI reduce production AExpr -> TRUE 
-- On RSQPAREN reduce production AExpr -> TRUE 
-- On RPAREN reduce production AExpr -> TRUE 
-- On PLUS reduce production AExpr -> TRUE 
-- On OOR reduce production AExpr -> TRUE 
-- On MULT reduce production AExpr -> TRUE 
-- On MINUS reduce production AExpr -> TRUE 
-- On LT reduce production AExpr -> TRUE 
-- On LSQPAREN reduce production AExpr -> TRUE 
-- On LPAREN reduce production AExpr -> TRUE 
-- On LET reduce production AExpr -> TRUE 
-- On INTV reduce production AExpr -> TRUE 
-- On IN reduce production AExpr -> TRUE 
-- On ID reduce production AExpr -> TRUE 
-- On GT reduce production AExpr -> TRUE 
-- On FALSE reduce production AExpr -> TRUE 
-- On EQ reduce production AExpr -> TRUE 
-- On ELSE reduce production AExpr -> TRUE 
-- On CONS reduce production AExpr -> TRUE 
-- On AND reduce production AExpr -> TRUE 
-- On AAND reduce production AExpr -> TRUE 

State 2:
MatchExpr -> MATCH . Expr WITH LSQPAREN RSQPAREN RARROW Expr VERT ID CONS ID RARROW Expr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN LET IN ELSE AND ]
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 14
-- On IF shift to state 15
-- On ID shift to state 16
-- On FUN shift to state 17
-- On FALSE shift to state 20
-- On DFUN shift to state 21
-- On PExpr shift to state 24
-- On ORExpr shift to state 41
-- On MatchExpr shift to state 53
-- On MExpr shift to state 36
-- On LetExpr shift to state 54
-- On LTExpr shift to state 43
-- On IfExpr shift to state 55
-- On GTExpr shift to state 44
-- On FunExpr shift to state 56
-- On Expr shift to state 94
-- On EQExpr shift to state 45
-- On ConsExpr shift to state 58
-- On AppExpr shift to state 31
-- On ANDExpr shift to state 52
-- On AExpr shift to state 30

State 3:
AExpr -> LSQPAREN . ListExpr RSQPAREN [ WITH VERT TRUE THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LSQPAREN LPAREN LET INTV IN ID GT FALSE EQ ELSE CONS AND AAND ]
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 14
-- On IF shift to state 15
-- On ID shift to state 16
-- On FUN shift to state 17
-- On FALSE shift to state 20
-- On DFUN shift to state 21
-- On PExpr shift to state 24
-- On ORExpr shift to state 41
-- On MatchExpr shift to state 53
-- On MExpr shift to state 36
-- On ListExpr shift to state 89
-- On LetExpr shift to state 54
-- On LTExpr shift to state 43
-- On IfExpr shift to state 55
-- On GTExpr shift to state 44
-- On FunExpr shift to state 56
-- On Expr shift to state 91
-- On EQExpr shift to state 45
-- On ConsExpr shift to state 58
-- On AppExpr shift to state 31
-- On ANDExpr shift to state 52
-- On AExpr shift to state 30
-- On RSQPAREN reduce production ListExpr -> 

State 4:
AExpr -> LPAREN . Expr RPAREN [ WITH VERT TRUE THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LSQPAREN LPAREN LET INTV IN ID GT FALSE EQ ELSE CONS AND AAND ]
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 14
-- On IF shift to state 15
-- On ID shift to state 16
-- On FUN shift to state 17
-- On FALSE shift to state 20
-- On DFUN shift to state 21
-- On PExpr shift to state 24
-- On ORExpr shift to state 41
-- On MatchExpr shift to state 53
-- On MExpr shift to state 36
-- On LetExpr shift to state 54
-- On LTExpr shift to state 43
-- On IfExpr shift to state 55
-- On GTExpr shift to state 44
-- On FunExpr shift to state 56
-- On Expr shift to state 87
-- On EQExpr shift to state 45
-- On ConsExpr shift to state 58
-- On AppExpr shift to state 31
-- On ANDExpr shift to state 52
-- On AExpr shift to state 30

State 5:
LetExpr -> LET . DeclExpr IN Expr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN LET IN ELSE AND ]
LetExpr -> LET . REC RecDeclExpr IN Expr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN LET IN ELSE AND ]
-- On REC shift to state 6
-- On ID shift to state 75
-- On UnitDeclExpr shift to state 81
-- On DeclExpr shift to state 84

State 6:
LetExpr -> LET REC . RecDeclExpr IN Expr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN LET IN ELSE AND ]
-- On ID shift to state 7
-- On UnitRecDeclExpr shift to state 69
-- On RecDeclExpr shift to state 72

State 7:
UnitRecDeclExpr -> ID . MulID EQ Expr [ SEMISEMI IN AND ]
UnitRecDeclExpr -> ID . EQ FUN MulID RARROW Expr [ SEMISEMI IN AND ]
-- On ID shift to state 8
-- On EQ shift to state 10
-- On MulID shift to state 66

State 8:
MulID -> ID . MulID [ RARROW EQ ]
MulID -> ID . [ RARROW EQ ]
-- On ID shift to state 8
-- On MulID shift to state 9
-- On RARROW reduce production MulID -> ID 
-- On EQ reduce production MulID -> ID 

State 9:
MulID -> ID MulID . [ RARROW EQ ]
-- On RARROW reduce production MulID -> ID MulID 
-- On EQ reduce production MulID -> ID MulID 

State 10:
UnitRecDeclExpr -> ID EQ . FUN MulID RARROW Expr [ SEMISEMI IN AND ]
-- On FUN shift to state 11

State 11:
UnitRecDeclExpr -> ID EQ FUN . MulID RARROW Expr [ SEMISEMI IN AND ]
-- On ID shift to state 8
-- On MulID shift to state 12

State 12:
UnitRecDeclExpr -> ID EQ FUN MulID . RARROW Expr [ SEMISEMI IN AND ]
-- On RARROW shift to state 13

State 13:
UnitRecDeclExpr -> ID EQ FUN MulID RARROW . Expr [ SEMISEMI IN AND ]
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 14
-- On IF shift to state 15
-- On ID shift to state 16
-- On FUN shift to state 17
-- On FALSE shift to state 20
-- On DFUN shift to state 21
-- On PExpr shift to state 24
-- On ORExpr shift to state 41
-- On MatchExpr shift to state 53
-- On MExpr shift to state 36
-- On LetExpr shift to state 54
-- On LTExpr shift to state 43
-- On IfExpr shift to state 55
-- On GTExpr shift to state 44
-- On FunExpr shift to state 56
-- On Expr shift to state 65
-- On EQExpr shift to state 45
-- On ConsExpr shift to state 58
-- On AppExpr shift to state 31
-- On ANDExpr shift to state 52
-- On AExpr shift to state 30

State 14:
AExpr -> INTV . [ WITH VERT TRUE THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LSQPAREN LPAREN LET INTV IN ID GT FALSE EQ ELSE CONS AND AAND ]
-- On WITH reduce production AExpr -> INTV 
-- On VERT reduce production AExpr -> INTV 
-- On TRUE reduce production AExpr -> INTV 
-- On THEN reduce production AExpr -> INTV 
-- On SEMISEMI reduce production AExpr -> INTV 
-- On SEMI reduce production AExpr -> INTV 
-- On RSQPAREN reduce production AExpr -> INTV 
-- On RPAREN reduce production AExpr -> INTV 
-- On PLUS reduce production AExpr -> INTV 
-- On OOR reduce production AExpr -> INTV 
-- On MULT reduce production AExpr -> INTV 
-- On MINUS reduce production AExpr -> INTV 
-- On LT reduce production AExpr -> INTV 
-- On LSQPAREN reduce production AExpr -> INTV 
-- On LPAREN reduce production AExpr -> INTV 
-- On LET reduce production AExpr -> INTV 
-- On INTV reduce production AExpr -> INTV 
-- On IN reduce production AExpr -> INTV 
-- On ID reduce production AExpr -> INTV 
-- On GT reduce production AExpr -> INTV 
-- On FALSE reduce production AExpr -> INTV 
-- On EQ reduce production AExpr -> INTV 
-- On ELSE reduce production AExpr -> INTV 
-- On CONS reduce production AExpr -> INTV 
-- On AND reduce production AExpr -> INTV 
-- On AAND reduce production AExpr -> INTV 

State 15:
IfExpr -> IF . Expr THEN Expr ELSE Expr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN LET IN ELSE AND ]
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 14
-- On IF shift to state 15
-- On ID shift to state 16
-- On FUN shift to state 17
-- On FALSE shift to state 20
-- On DFUN shift to state 21
-- On PExpr shift to state 24
-- On ORExpr shift to state 41
-- On MatchExpr shift to state 53
-- On MExpr shift to state 36
-- On LetExpr shift to state 54
-- On LTExpr shift to state 43
-- On IfExpr shift to state 55
-- On GTExpr shift to state 44
-- On FunExpr shift to state 56
-- On Expr shift to state 60
-- On EQExpr shift to state 45
-- On ConsExpr shift to state 58
-- On AppExpr shift to state 31
-- On ANDExpr shift to state 52
-- On AExpr shift to state 30

State 16:
AExpr -> ID . [ WITH VERT TRUE THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LSQPAREN LPAREN LET INTV IN ID GT FALSE EQ ELSE CONS AND AAND ]
-- On WITH reduce production AExpr -> ID 
-- On VERT reduce production AExpr -> ID 
-- On TRUE reduce production AExpr -> ID 
-- On THEN reduce production AExpr -> ID 
-- On SEMISEMI reduce production AExpr -> ID 
-- On SEMI reduce production AExpr -> ID 
-- On RSQPAREN reduce production AExpr -> ID 
-- On RPAREN reduce production AExpr -> ID 
-- On PLUS reduce production AExpr -> ID 
-- On OOR reduce production AExpr -> ID 
-- On MULT reduce production AExpr -> ID 
-- On MINUS reduce production AExpr -> ID 
-- On LT reduce production AExpr -> ID 
-- On LSQPAREN reduce production AExpr -> ID 
-- On LPAREN reduce production AExpr -> ID 
-- On LET reduce production AExpr -> ID 
-- On INTV reduce production AExpr -> ID 
-- On IN reduce production AExpr -> ID 
-- On ID reduce production AExpr -> ID 
-- On GT reduce production AExpr -> ID 
-- On FALSE reduce production AExpr -> ID 
-- On EQ reduce production AExpr -> ID 
-- On ELSE reduce production AExpr -> ID 
-- On CONS reduce production AExpr -> ID 
-- On AND reduce production AExpr -> ID 
-- On AAND reduce production AExpr -> ID 

State 17:
FunExpr -> FUN . MulID RARROW Expr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN LET IN ELSE AND ]
-- On ID shift to state 8
-- On MulID shift to state 18

State 18:
FunExpr -> FUN MulID . RARROW Expr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN LET IN ELSE AND ]
-- On RARROW shift to state 19

State 19:
FunExpr -> FUN MulID RARROW . Expr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN LET IN ELSE AND ]
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 14
-- On IF shift to state 15
-- On ID shift to state 16
-- On FUN shift to state 17
-- On FALSE shift to state 20
-- On DFUN shift to state 21
-- On PExpr shift to state 24
-- On ORExpr shift to state 41
-- On MatchExpr shift to state 53
-- On MExpr shift to state 36
-- On LetExpr shift to state 54
-- On LTExpr shift to state 43
-- On IfExpr shift to state 55
-- On GTExpr shift to state 44
-- On FunExpr shift to state 56
-- On Expr shift to state 59
-- On EQExpr shift to state 45
-- On ConsExpr shift to state 58
-- On AppExpr shift to state 31
-- On ANDExpr shift to state 52
-- On AExpr shift to state 30

State 20:
AExpr -> FALSE . [ WITH VERT TRUE THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LSQPAREN LPAREN LET INTV IN ID GT FALSE EQ ELSE CONS AND AAND ]
-- On WITH reduce production AExpr -> FALSE 
-- On VERT reduce production AExpr -> FALSE 
-- On TRUE reduce production AExpr -> FALSE 
-- On THEN reduce production AExpr -> FALSE 
-- On SEMISEMI reduce production AExpr -> FALSE 
-- On SEMI reduce production AExpr -> FALSE 
-- On RSQPAREN reduce production AExpr -> FALSE 
-- On RPAREN reduce production AExpr -> FALSE 
-- On PLUS reduce production AExpr -> FALSE 
-- On OOR reduce production AExpr -> FALSE 
-- On MULT reduce production AExpr -> FALSE 
-- On MINUS reduce production AExpr -> FALSE 
-- On LT reduce production AExpr -> FALSE 
-- On LSQPAREN reduce production AExpr -> FALSE 
-- On LPAREN reduce production AExpr -> FALSE 
-- On LET reduce production AExpr -> FALSE 
-- On INTV reduce production AExpr -> FALSE 
-- On IN reduce production AExpr -> FALSE 
-- On ID reduce production AExpr -> FALSE 
-- On GT reduce production AExpr -> FALSE 
-- On FALSE reduce production AExpr -> FALSE 
-- On EQ reduce production AExpr -> FALSE 
-- On ELSE reduce production AExpr -> FALSE 
-- On CONS reduce production AExpr -> FALSE 
-- On AND reduce production AExpr -> FALSE 
-- On AAND reduce production AExpr -> FALSE 

State 21:
FunExpr -> DFUN . MulID RARROW Expr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN LET IN ELSE AND ]
-- On ID shift to state 8
-- On MulID shift to state 22

State 22:
FunExpr -> DFUN MulID . RARROW Expr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN LET IN ELSE AND ]
-- On RARROW shift to state 23

State 23:
FunExpr -> DFUN MulID RARROW . Expr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN LET IN ELSE AND ]
-- On TRUE shift to state 1
-- On MATCH shift to state 2
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On LET shift to state 5
-- On INTV shift to state 14
-- On IF shift to state 15
-- On ID shift to state 16
-- On FUN shift to state 17
-- On FALSE shift to state 20
-- On DFUN shift to state 21
-- On PExpr shift to state 24
-- On ORExpr shift to state 41
-- On MatchExpr shift to state 53
-- On MExpr shift to state 36
-- On LetExpr shift to state 54
-- On LTExpr shift to state 43
-- On IfExpr shift to state 55
-- On GTExpr shift to state 44
-- On FunExpr shift to state 56
-- On Expr shift to state 57
-- On EQExpr shift to state 45
-- On ConsExpr shift to state 58
-- On AppExpr shift to state 31
-- On ANDExpr shift to state 52
-- On AExpr shift to state 30

State 24:
EQExpr -> PExpr . EQ PExpr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN OOR LET IN ELSE CONS AND AAND ]
GTExpr -> PExpr . GT PExpr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN OOR LET IN ELSE CONS AND AAND ]
GTExpr -> PExpr . [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN OOR LET IN ELSE CONS AND AAND ]
LTExpr -> PExpr . LT PExpr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN OOR LET IN ELSE CONS AND AAND ]
PExpr -> PExpr . PLUS MExpr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MINUS LT LET IN GT EQ ELSE CONS AND AAND ]
PExpr -> PExpr . MINUS MExpr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MINUS LT LET IN GT EQ ELSE CONS AND AAND ]
-- On PLUS shift to state 25
-- On MINUS shift to state 32
-- On LT shift to state 34
-- On GT shift to state 37
-- On EQ shift to state 39
-- On WITH reduce production GTExpr -> PExpr 
-- On VERT reduce production GTExpr -> PExpr 
-- On THEN reduce production GTExpr -> PExpr 
-- On SEMISEMI reduce production GTExpr -> PExpr 
-- On SEMI reduce production GTExpr -> PExpr 
-- On RSQPAREN reduce production GTExpr -> PExpr 
-- On RPAREN reduce production GTExpr -> PExpr 
-- On OOR reduce production GTExpr -> PExpr 
-- On LET reduce production GTExpr -> PExpr 
-- On IN reduce production GTExpr -> PExpr 
-- On ELSE reduce production GTExpr -> PExpr 
-- On CONS reduce production GTExpr -> PExpr 
-- On AND reduce production GTExpr -> PExpr 
-- On AAND reduce production GTExpr -> PExpr 

State 25:
PExpr -> PExpr PLUS . MExpr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MINUS LT LET IN GT EQ ELSE CONS AND AAND ]
-- On TRUE shift to state 1
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On INTV shift to state 14
-- On ID shift to state 16
-- On FALSE shift to state 20
-- On MExpr shift to state 26
-- On AppExpr shift to state 31
-- On AExpr shift to state 30

State 26:
MExpr -> MExpr . MULT AppExpr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LET IN GT EQ ELSE CONS AND AAND ]
PExpr -> PExpr PLUS MExpr . [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MINUS LT LET IN GT EQ ELSE CONS AND AAND ]
-- On MULT shift to state 27
-- On WITH reduce production PExpr -> PExpr PLUS MExpr 
-- On VERT reduce production PExpr -> PExpr PLUS MExpr 
-- On THEN reduce production PExpr -> PExpr PLUS MExpr 
-- On SEMISEMI reduce production PExpr -> PExpr PLUS MExpr 
-- On SEMI reduce production PExpr -> PExpr PLUS MExpr 
-- On RSQPAREN reduce production PExpr -> PExpr PLUS MExpr 
-- On RPAREN reduce production PExpr -> PExpr PLUS MExpr 
-- On PLUS reduce production PExpr -> PExpr PLUS MExpr 
-- On OOR reduce production PExpr -> PExpr PLUS MExpr 
-- On MINUS reduce production PExpr -> PExpr PLUS MExpr 
-- On LT reduce production PExpr -> PExpr PLUS MExpr 
-- On LET reduce production PExpr -> PExpr PLUS MExpr 
-- On IN reduce production PExpr -> PExpr PLUS MExpr 
-- On GT reduce production PExpr -> PExpr PLUS MExpr 
-- On EQ reduce production PExpr -> PExpr PLUS MExpr 
-- On ELSE reduce production PExpr -> PExpr PLUS MExpr 
-- On CONS reduce production PExpr -> PExpr PLUS MExpr 
-- On AND reduce production PExpr -> PExpr PLUS MExpr 
-- On AAND reduce production PExpr -> PExpr PLUS MExpr 

State 27:
MExpr -> MExpr MULT . AppExpr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LET IN GT EQ ELSE CONS AND AAND ]
-- On TRUE shift to state 1
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On INTV shift to state 14
-- On ID shift to state 16
-- On FALSE shift to state 20
-- On AppExpr shift to state 28
-- On AExpr shift to state 30

State 28:
AppExpr -> AppExpr . AExpr [ WITH VERT TRUE THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LSQPAREN LPAREN LET INTV IN ID GT FALSE EQ ELSE CONS AND AAND ]
MExpr -> MExpr MULT AppExpr . [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LET IN GT EQ ELSE CONS AND AAND ]
-- On TRUE shift to state 1
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On INTV shift to state 14
-- On ID shift to state 16
-- On FALSE shift to state 20
-- On AExpr shift to state 29
-- On WITH reduce production MExpr -> MExpr MULT AppExpr 
-- On VERT reduce production MExpr -> MExpr MULT AppExpr 
-- On THEN reduce production MExpr -> MExpr MULT AppExpr 
-- On SEMISEMI reduce production MExpr -> MExpr MULT AppExpr 
-- On SEMI reduce production MExpr -> MExpr MULT AppExpr 
-- On RSQPAREN reduce production MExpr -> MExpr MULT AppExpr 
-- On RPAREN reduce production MExpr -> MExpr MULT AppExpr 
-- On PLUS reduce production MExpr -> MExpr MULT AppExpr 
-- On OOR reduce production MExpr -> MExpr MULT AppExpr 
-- On MULT reduce production MExpr -> MExpr MULT AppExpr 
-- On MINUS reduce production MExpr -> MExpr MULT AppExpr 
-- On LT reduce production MExpr -> MExpr MULT AppExpr 
-- On LET reduce production MExpr -> MExpr MULT AppExpr 
-- On IN reduce production MExpr -> MExpr MULT AppExpr 
-- On GT reduce production MExpr -> MExpr MULT AppExpr 
-- On EQ reduce production MExpr -> MExpr MULT AppExpr 
-- On ELSE reduce production MExpr -> MExpr MULT AppExpr 
-- On CONS reduce production MExpr -> MExpr MULT AppExpr 
-- On AND reduce production MExpr -> MExpr MULT AppExpr 
-- On AAND reduce production MExpr -> MExpr MULT AppExpr 

State 29:
AppExpr -> AppExpr AExpr . [ WITH VERT TRUE THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LSQPAREN LPAREN LET INTV IN ID GT FALSE EQ ELSE CONS AND AAND ]
-- On WITH reduce production AppExpr -> AppExpr AExpr 
-- On VERT reduce production AppExpr -> AppExpr AExpr 
-- On TRUE reduce production AppExpr -> AppExpr AExpr 
-- On THEN reduce production AppExpr -> AppExpr AExpr 
-- On SEMISEMI reduce production AppExpr -> AppExpr AExpr 
-- On SEMI reduce production AppExpr -> AppExpr AExpr 
-- On RSQPAREN reduce production AppExpr -> AppExpr AExpr 
-- On RPAREN reduce production AppExpr -> AppExpr AExpr 
-- On PLUS reduce production AppExpr -> AppExpr AExpr 
-- On OOR reduce production AppExpr -> AppExpr AExpr 
-- On MULT reduce production AppExpr -> AppExpr AExpr 
-- On MINUS reduce production AppExpr -> AppExpr AExpr 
-- On LT reduce production AppExpr -> AppExpr AExpr 
-- On LSQPAREN reduce production AppExpr -> AppExpr AExpr 
-- On LPAREN reduce production AppExpr -> AppExpr AExpr 
-- On LET reduce production AppExpr -> AppExpr AExpr 
-- On INTV reduce production AppExpr -> AppExpr AExpr 
-- On IN reduce production AppExpr -> AppExpr AExpr 
-- On ID reduce production AppExpr -> AppExpr AExpr 
-- On GT reduce production AppExpr -> AppExpr AExpr 
-- On FALSE reduce production AppExpr -> AppExpr AExpr 
-- On EQ reduce production AppExpr -> AppExpr AExpr 
-- On ELSE reduce production AppExpr -> AppExpr AExpr 
-- On CONS reduce production AppExpr -> AppExpr AExpr 
-- On AND reduce production AppExpr -> AppExpr AExpr 
-- On AAND reduce production AppExpr -> AppExpr AExpr 

State 30:
AppExpr -> AExpr . [ WITH VERT TRUE THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LSQPAREN LPAREN LET INTV IN ID GT FALSE EQ ELSE CONS AND AAND ]
-- On WITH reduce production AppExpr -> AExpr 
-- On VERT reduce production AppExpr -> AExpr 
-- On TRUE reduce production AppExpr -> AExpr 
-- On THEN reduce production AppExpr -> AExpr 
-- On SEMISEMI reduce production AppExpr -> AExpr 
-- On SEMI reduce production AppExpr -> AExpr 
-- On RSQPAREN reduce production AppExpr -> AExpr 
-- On RPAREN reduce production AppExpr -> AExpr 
-- On PLUS reduce production AppExpr -> AExpr 
-- On OOR reduce production AppExpr -> AExpr 
-- On MULT reduce production AppExpr -> AExpr 
-- On MINUS reduce production AppExpr -> AExpr 
-- On LT reduce production AppExpr -> AExpr 
-- On LSQPAREN reduce production AppExpr -> AExpr 
-- On LPAREN reduce production AppExpr -> AExpr 
-- On LET reduce production AppExpr -> AExpr 
-- On INTV reduce production AppExpr -> AExpr 
-- On IN reduce production AppExpr -> AExpr 
-- On ID reduce production AppExpr -> AExpr 
-- On GT reduce production AppExpr -> AExpr 
-- On FALSE reduce production AppExpr -> AExpr 
-- On EQ reduce production AppExpr -> AExpr 
-- On ELSE reduce production AppExpr -> AExpr 
-- On CONS reduce production AppExpr -> AExpr 
-- On AND reduce production AppExpr -> AExpr 
-- On AAND reduce production AppExpr -> AExpr 

State 31:
AppExpr -> AppExpr . AExpr [ WITH VERT TRUE THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LSQPAREN LPAREN LET INTV IN ID GT FALSE EQ ELSE CONS AND AAND ]
MExpr -> AppExpr . [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LET IN GT EQ ELSE CONS AND AAND ]
-- On TRUE shift to state 1
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On INTV shift to state 14
-- On ID shift to state 16
-- On FALSE shift to state 20
-- On AExpr shift to state 29
-- On WITH reduce production MExpr -> AppExpr 
-- On VERT reduce production MExpr -> AppExpr 
-- On THEN reduce production MExpr -> AppExpr 
-- On SEMISEMI reduce production MExpr -> AppExpr 
-- On SEMI reduce production MExpr -> AppExpr 
-- On RSQPAREN reduce production MExpr -> AppExpr 
-- On RPAREN reduce production MExpr -> AppExpr 
-- On PLUS reduce production MExpr -> AppExpr 
-- On OOR reduce production MExpr -> AppExpr 
-- On MULT reduce production MExpr -> AppExpr 
-- On MINUS reduce production MExpr -> AppExpr 
-- On LT reduce production MExpr -> AppExpr 
-- On LET reduce production MExpr -> AppExpr 
-- On IN reduce production MExpr -> AppExpr 
-- On GT reduce production MExpr -> AppExpr 
-- On EQ reduce production MExpr -> AppExpr 
-- On ELSE reduce production MExpr -> AppExpr 
-- On CONS reduce production MExpr -> AppExpr 
-- On AND reduce production MExpr -> AppExpr 
-- On AAND reduce production MExpr -> AppExpr 

State 32:
PExpr -> PExpr MINUS . MExpr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MINUS LT LET IN GT EQ ELSE CONS AND AAND ]
-- On TRUE shift to state 1
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On INTV shift to state 14
-- On ID shift to state 16
-- On FALSE shift to state 20
-- On MExpr shift to state 33
-- On AppExpr shift to state 31
-- On AExpr shift to state 30

State 33:
MExpr -> MExpr . MULT AppExpr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MULT MINUS LT LET IN GT EQ ELSE CONS AND AAND ]
PExpr -> PExpr MINUS MExpr . [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN PLUS OOR MINUS LT LET IN GT EQ ELSE CONS AND AAND ]
-- On MULT shift to state 27
-- On WITH reduce production PExpr -> PExpr MINUS MExpr 
-- On VERT reduce production PExpr -> PExpr MINUS MExpr 
-- On THEN reduce production PExpr -> PExpr MINUS MExpr 
-- On SEMISEMI reduce production PExpr -> PExpr MINUS MExpr 
-- On SEMI reduce production PExpr -> PExpr MINUS MExpr 
-- On RSQPAREN reduce production PExpr -> PExpr MINUS MExpr 
-- On RPAREN reduce production PExpr -> PExpr MINUS MExpr 
-- On PLUS reduce production PExpr -> PExpr MINUS MExpr 
-- On OOR reduce production PExpr -> PExpr MINUS MExpr 
-- On MINUS reduce production PExpr -> PExpr MINUS MExpr 
-- On LT reduce production PExpr -> PExpr MINUS MExpr 
-- On LET reduce production PExpr -> PExpr MINUS MExpr 
-- On IN reduce production PExpr -> PExpr MINUS MExpr 
-- On GT reduce production PExpr -> PExpr MINUS MExpr 
-- On EQ reduce production PExpr -> PExpr MINUS MExpr 
-- On ELSE reduce production PExpr -> PExpr MINUS MExpr 
-- On CONS reduce production PExpr -> PExpr MINUS MExpr 
-- On AND reduce production PExpr -> PExpr MINUS MExpr 
-- On AAND reduce production PExpr -> PExpr MINUS MExpr 

State 34:
LTExpr -> PExpr LT . PExpr [ WITH VERT THEN SEMISEMI SEMI RSQPAREN RPAREN OOR LET IN ELSE CONS AND AAND ]
-- On TRUE shift to state 1
-- On LSQPAREN shift to state 3
-- On LPAREN shift to state 4
-- On INTV shift to state 14
-- On ID shift to state 16
-- On FALSE shift to state 20
-- On PExpr shift to state 35
-- On MExpr shift to state 36
-- On AppExpr shift to state 31
-- On AExpr shift to state 30
